--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_map: ^6.1.0
   latlong2: 0.9.0
+  geolocator: ^10.1.0
+
+
 
 
 dev_dependencies:
