--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,14 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: 0.9.0
   geolocator: ^10.1.0
+  async: ^2.11.0
+  positioned_tap_detector_2: ^1.0.4
+  geocoding: ^2.1.1
+  flutter_geocoder: ^0.2.2-nullsafety
+  flutter_osm_plugin: ^0.22.3+1
+  http: ^1.1.0
+  flutter_map_geojson: ^1.0.6
+  flutter_map_marker_cluster: ^1.3.4
 
 
 
